# Simple-Data-Transfer-between-CPP-and-Python

./: README.md
assistant/: collection.py  project_files_content.txt  py编译指令.txt  显示指定uvicorn
cpp/: CMakeLists.txt  send.cpp
proto/: message.proto
python/: auto_gen_proto.py  path_config.py  server.py
